--- a/app/src/main/res/layout/activity_task_view.xml
+++ b/app/src/main/res/layout/activity_task_view.xml
@@ -2,8 +2,6 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-
-
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -20,34 +18,15 @@
         app:layout_constraintTop_toTopOf="parent"
         app:title="@string/to_do_list" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="178dp"
-        android:layout_height="38dp"
-        android:layout_marginTop="88dp"
-        android:background="?attr/colorPrimary"
-        android:text="Work Meating"
-        android:gravity="center"
-        android:textColor="@color/white"
-        android:theme="@style/Theme.Calendar"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/RecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="178dp"
-        android:layout_height="38dp"
-        android:layout_marginTop="28dp"
-        android:background="?attr/colorPrimary"
-        android:gravity="center"
-        android:text="Course HomeWork"
-        android:textColor="@color/white"
-        android:theme="@style/Theme.Calendar"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
