--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,11 +24,11 @@
         android:id="@+id/Today"
         android:layout_width="309dp"
         android:layout_height="43dp"
-        android:layout_marginTop="68dp"
+        android:layout_marginTop="32dp"
+        android:onClick="TaskView"
         android:text="Today"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:onClick="TaskView"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
         tools:ignore="TouchTargetSizeCheck" />
 
@@ -36,12 +36,12 @@
         android:id="@+id/All_tasks"
         android:layout_width="309dp"
         android:layout_height="43dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="16dp"
+        android:onClick="TaskView"
         android:text="All Tasks"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Today"
-        android:onClick="TaskView"
         tools:ignore="TouchTargetSizeCheck" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -65,11 +65,11 @@
         android:layout_marginBottom="16dp"
         android:clickable="true"
         android:onClick="AddEvent"
+
         android:src="@drawable/ic_event"
         android:visibility="invisible"
-        app:layout_constraintBottom_toTopOf="@+id/Add"
-        app:layout_constraintEnd_toEndOf="parent"
-
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/Add"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -77,7 +77,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="80dp"
+        android:layout_marginBottom="16dp"
         android:clickable="true"
         android:onClick="AddCategory"
         android:src="@drawable/ic_category"
@@ -85,6 +85,19 @@
         app:layout_constraintBottom_toTopOf="@+id/Add"
         app:layout_constraintEnd_toEndOf="parent"
         tools:ignore="SpeakableTextPresentCheck" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/categoryRecycler"
+        android:layout_width="407dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/Create_CategoryBTN"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/All_tasks"
+        tools:listitem="@layout/list_row_category" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
