--- a/app/src/main/res/layout/activity_create_event.xml
+++ b/app/src/main/res/layout/activity_create_event.xml
@@ -32,12 +32,30 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:minHeight="48dp"
-        android:text="@string/eventTitleText"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        android:hint="@string/eventTitleText"
+        app:layout_constraintBottom_toTopOf="@+id/taskDesc"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/taskDesc"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="32dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:minHeight="48dp"
+        android:hint="Description"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/TitleEdit" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -48,7 +66,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/TitleEdit">
+        app:layout_constraintTop_toBottomOf="@+id/taskDesc">
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
