--- a/app/src/main/res/layout/recycler_row.xml
+++ b/app/src/main/res/layout/recycler_row.xml
@@ -23,6 +23,14 @@
             android:layout_weight="1"
             android:textColor="#000000"
             android:textSize="17sp" />
+        <TextView
+            android:id="@+id/description_Field"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="05dp"
+            android:layout_weight="1"
+            android:textColor="#000000"
+            android:textSize="12sp" />
 
         <TextView
             android:id="@+id/Date"
