Made some improvment

--- a/app/src/main/res/layout/recycler_row.xml
+++ b/app/src/main/res/layout/recycler_row.xml
@@ -46,7 +46,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:src="@drawable/ic_edit"></ImageView>
+        android:src="@drawable/ic_edit"
+        android:onClick="updateTasK"></ImageView>
 
     <ImageView
         android:id="@+id/taskDeleteBTN"
