--- a/app/src/main/res/layout/list_row_category.xml
+++ b/app/src/main/res/layout/list_row_category.xml
@@ -24,6 +24,12 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:id="@+id/catgColorDisplay"
+            android:layout_marginStart="8dp"
+            android:src="@drawable/ic_catgcolor"></ImageView>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:id="@+id/catgEditBTN"
             android:layout_marginStart="8dp"
             android:src="@drawable/ic_edit"></ImageView>
