--- a/app/src/main/res/layout/activity_update_task.xml
+++ b/app/src/main/res/layout/activity_update_task.xml
@@ -206,7 +206,7 @@
         android:id="@+id/DateSwitchUpdate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="13dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="29dp"
         android:layout_marginEnd="317dp"
         android:layout_marginBottom="16dp"
@@ -214,8 +214,10 @@
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/descUpdate" />
+        app:layout_constraintTop_toBottomOf="@+id/descUpdate"
+        app:layout_constraintVertical_bias="0.448" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
