--- a/app/src/main/res/layout/activity_update_task.xml
+++ b/app/src/main/res/layout/activity_update_task.xml
@@ -21,6 +21,18 @@
         android:onClick="SaveButton1"
         />
 
+    <ImageView
+        android:id="@+id/taskDeleteBTN"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:src="@drawable/ic_delete"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"></ImageView>
+
+
+
     <EditText
         android:id="@+id/titleUpdate"
         android:layout_width="0dp"
