--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,11 +21,10 @@
         app:title="@string/to_do_list" />
 
     <Button
-        android:id="@+id/Today"
+        android:id="@+id/TodayBTN"
         android:layout_width="309dp"
         android:layout_height="43dp"
         android:layout_marginTop="32dp"
-        android:onClick="TaskView"
         android:text="Today"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -41,7 +40,7 @@
         android:text="All Tasks"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Today"
+        app:layout_constraintTop_toBottomOf="@+id/TodayBTN"
         tools:ignore="TouchTargetSizeCheck" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
